operator/gitops/pac/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    pipelines-as-code/route: controller
  annotations:
    kubernetes.io/ingress.class: nginx
  name: pipelines-as-code
  namespace: pipelines-as-code
spec:
  rules:
    - host: webhook-pipelines-as-code.apps.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: pipelines-as-code-controller
                port:
                  number: 8080
            path: /
            pathType: Prefix
